Fix spacing issues

--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@
 }
 
 #board {
-  width: 80%;
+  width: 95%;
 }
 
 .word-card {
